--- a/Admin Side/Stocks/Edit Stock.resx
+++ b/Admin Side/Stocks/Edit Stock.resx
@@ -117,63 +117,76 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="gunaDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>12, 42</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="dateAddedTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="itemPriceTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAMgAAAAlCAYAAAAHgqbCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGLSURBVHhe7d0hT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
-        QGKQSAQCCQ6SrgRCQiYQC2m3soxkAQKTI1lI6SmnIQR2EvR9n+QT62rf3KrWAfiH/DJazpJgs98J24z5
-        siwJt/JOa1Uz+C2/iBYGSXhWrmDM15WxdOWQ0Cy+lX9WcTxc7xZPvaPibXjOmDd7vj8uhjd7GknQKw+M
-        hqZRnh5Ja6WOY/Y+KQAffcymxWP3oIokjYN1zcO5rBNuy8WX9ERvBfw0GcX1o1Zb83BOfshFOWoAn0kD
-        BALMQSCAgUAAA4EABgIBDAQCGAgEMBAIYCAQwEAggIFAAAOBAAYCAQwEAhgIBDAQCGAgEMBAIICBQAAD
-        gQAGAgEMBAIYCAQwEAhgmBdIUy6+Dk71NsBPf75ZMY131uTi6HZfbwP8JC9ulxbkcwiaR/Xpg0Y/Ccby
-        x/jusDpmGPNpcnLIG96r0yMJpmUTi5rHF/l4SB0JY75O4sjiYEOz+Ek+oiNHizx/MebhmvlVtKQ5ALA5
-        9wl5K+dovgAoWAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="itemIDTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAMgAAAAlCAYAAAAHgqbCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGLSURBVHhe7d0hT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
-        QGKQSAQCCQ6SrgRCQiYQC2m3soxkAQKTI1lI6SmnIQR2EvR9n+QT62rf3KrWAfiH/DJazpJgs98J24z5
-        siwJt/JOa1Uz+C2/iBYGSXhWrmDM15WxdOWQ0Cy+lX9WcTxc7xZPvaPibXjOmDd7vj8uhjd7GknQKw+M
-        hqZRnh5Ja6WOY/Y+KQAffcymxWP3oIokjYN1zcO5rBNuy8WX9ERvBfw0GcX1o1Zb83BOfshFOWoAn0kD
-        BALMQSCAgUAAA4EABgIBDAQCGAgEMBAIYCAQwEAggIFAAAOBAAYCAQwEAhgIBDAQCGAgEMBAIICBQAAD
-        gQAGAgEMBAIYCAQwEAhgmBdIUy6+Dk71NsBPf75ZMY131uTi6HZfbwP8JC9ulxbkcwiaR/Xpg0Y/Ccby
-        x/jusDpmGPNpcnLIG96r0yMJpmUTi5rHF/l4SB0JY75O4sjiYEOz+Ek+oiNHizx/MebhmvlVtKQ5ALA5
-        9wl5K+dovgAoWAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="itemQuantityTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAMgAAAAlCAYAAAAHgqbCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGLSURBVHhe7d0hT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
-        QGKQSAQCCQ6SrgRCQiYQC2m3soxkAQKTI1lI6SmnIQR2EvR9n+QT62rf3KrWAfiH/DJazpJgs98J24z5
-        siwJt/JOa1Uz+C2/iBYGSXhWrmDM15WxdOWQ0Cy+lX9WcTxc7xZPvaPibXjOmDd7vj8uhjd7GknQKw+M
-        hqZRnh5Ja6WOY/Y+KQAffcymxWP3oIokjYN1zcO5rBNuy8WX9ERvBfw0GcX1o1Zb83BOfshFOWoAn0kD
-        BALMQSCAgUAAA4EABgIBDAQCGAgEMBAIYCAQwEAggIFAAAOBAAYCAQwEAhgIBDAQCGAgEMBAIICBQAAD
-        gQAGAgEMBAIYCAQwEAhgmBdIUy6+Dk71NsBPf75ZMY131uTi6HZfbwP8JC9ulxbkcwiaR/Xpg0Y/Ccby
-        x/jusDpmGPNpcnLIG96r0yMJpmUTi5rHF/l4SB0JY75O4sjiYEOz+Ek+oiNHizx/MebhmvlVtKQ5ALA5
-        9wl5K+dovgAoWAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="itemTotalTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAMgAAAAlCAYAAAAHgqbCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGLSURBVHhe7d0hT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
-        QGKQSAQCCQ6SrgRCQiYQC2m3soxkAQKTI1lI6SmnIQR2EvR9n+QT62rf3KrWAfiH/DJazpJgs98J24z5
-        siwJt/JOa1Uz+C2/iBYGSXhWrmDM15WxdOWQ0Cy+lX9WcTxc7xZPvaPibXjOmDd7vj8uhjd7GknQKw+M
-        hqZRnh5Ja6WOY/Y+KQAffcymxWP3oIokjYN1zcO5rBNuy8WX9ERvBfw0GcX1o1Zb83BOfshFOWoAn0kD
-        BALMQSCAgUAAA4EABgIBDAQCGAgEMBAIYCAQwEAggIFAAAOBAAYCAQwEAhgIBDAQCGAgEMBAIICBQAAD
-        gQAGAgEMBAIYCAQwEAhgmBdIUy6+Dk71NsBPf75ZMY131uTi6HZfbwP8JC9ulxbkcwiaR/Xpg0Y/Ccby
-        x/jusDpmGPNpcnLIG96r0yMJpmUTi5rHF/l4SB0JY75O4sjiYEOz+Ek+oiNHizx/MebhmvlVtKQ5ALA5
-        9wl5K+dovgAoWAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAALkAAAAlCAYAAAAeCUhkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGKSURBVHhe7dwhT8NQFIbhKyeRSCQSyU9AIpFIJHIZbTqD
+        QGKQSAQCCQ6StgRCQiYQC1m3soxkAQKTI1lI6SmnIQT4AffsfZJPrKt8c1N1HTB38stoOUuDzX4Sthnz
+        aVkabuVJa1VT/i2/iBYGaXhWrmDM55XBd+Sw1rS/lX9WgT9c7xZP3aPibXjOmFd7vj8uhjd7GnrQLQ/u
+        huZdnuJpa6UOfPY+KQBffcymxWPnoAq9FwfrmrhzWRJuy8OX3om+CvhrMorrz5a2Ju6c/JCHcuQDvpOO
+        iRymETnMI3KYR+Qwj8hhHpHDPCKHeUQO84gc5hE5zCNymEfkMI/IYR6Rwzwih3lEDvOIHOYROcwjcphH
+        5DCPyGEekcM8Iod5RA7z/ou8KQ9fB6f6GuCvP2/Q6sU7a/JwdLuvrwH+kgtrpWe5ylkTr65tbvTTYCx/
+        jO8Oq+OeMd8mJ7jcbFud4mkwLbte1MS/yOXldeiM+TwJPIuDDU37J7mIX454+ZZhzNM186toSZMG5oFz
+        nxynC3koI9v6AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="gunaElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>25, 37</value>
-  </metadata>
-  <metadata name="gunaDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>142, 37</value>
+    <value>164, 42</value>
   </metadata>
 </root>
